--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ h2 {
 }
 
 .yay-btn {
-    font-family: 'Pangolin', cursive;
+    font-family: 'Verdana';
     font-size: 18px;
     background-color: rgb(178, 150, 125); 
     color: white;
@@ -55,7 +55,7 @@ h2 {
 }
 
 .button {
-    font-family: 'Pangolin', cursive;
+    font-family: 'Verdana';
     font-size: 18px;
     background-color: rgb(178, 150, 125); 
     color: white;
