--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     font-family: 'Pangolin', cursive;
@@ -41,7 +42,7 @@ h2 {
 }
 
 .yay-btn {
-    font-family: 'Verdana';
+    font-family: "Jost", sans-serif;
     font-size: 18px;
     background-color: rgb(178, 150, 125); 
     color: white;
@@ -55,7 +56,7 @@ h2 {
 }
 
 .button {
-    font-family: 'Verdana';
+    font-family: "Jost", sans-serif;
     font-size: 18px;
     background-color: rgb(178, 150, 125); 
     color: white;
